traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:16: error: Boolean does not take parameters
      else (getDirection() == Direction.EST){
                                            ^